[project]
name = "google-calendar-mcpserver"
version = "0.1.3"
description = "AThis is an MCP (Model Context Protocol) server specifically built to collect and serve ratings and reviews for other MCP servers deployed on the NetMind platform."
authors = [
    {name = "yanrujing", email = "rujing.yan@protagonist-ai.com"}
]
repository = "https://github.com/protagolabs/Netmind-review-MCP"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp (>=1.6.0,<2.0.0)",
    "google-api-python-client (==2.177.0)",
    "google-auth (==2.40.3)",
    "google-auth-oauthlib (==1.2.2)",
    "google-auth-httplib2 (==0.2.0)",
    "google-api-core (==2.25.1)",
    "google-crc32c (==1.7.1)",
    "google-search-results (==2.4.2)",
    "googleapis-common-protos (==1.70.0)",
]

packages = [{ include = "src/google_calendar_mcpserver" }]


[tool.poetry.scripts]
google-calendar-mcpserver = "google_calendar_mcpserver:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

